--- a/common/head_tag.html
+++ b/common/head_tag.html
@@ -150,7 +150,7 @@
       <div class="custom-search-banner" >
         <div class="wrap custom-search-banner-wrap">
           <h1>{{theme-i18n "search_banner.headline"}}</h1>
-          <p>{{theme-i18n "search_banner.subhead"}}</p>
+          <h3>{{theme-i18n "search_banner.subhead"}}</h3>
           {{mount-widget widget="search-widget"}}
         </div>
       </div>
