Add configuration for Get Started Text

--- a/common/head_tag.html
+++ b/common/head_tag.html
@@ -152,7 +152,7 @@
           <h1>{{theme-i18n "search_banner.headline"}}</h1>
           <h3>
             {{theme-i18n "search_banner.subhead"}}
-            <a href={{theme-i18n "search_banner.get_started_uri"}}>Get Started</a>
+            <a href={{theme-i18n "search_banner.get_started_uri"}}>{{theme-i18n "search_banner.get_started_text"}}</a>
           </h3>
           {{mount-widget widget="search-widget"}}
         </div>
